fix - container won't take full height of overflowed html

--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
     background-color: var(--main-bg);
     /* font-family: 'IBM Plex Sans Hebrew', sans-serif; */
     font-family: sans-serif;
+    min-height: 550px;
 }
 
 #container {
